<resources>
    <string name="app_name">CarBuddy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="content_description_fab_add_operation">Add operation to current vehicle</string>

    <string name="insurance_description">Assicurazione</string>
    <string name="adding_insurance_description">Nuova istanza Assicurazione</string>
    <string name="insurance_cost_hint">Costo polizza</string>
    <string name="insurance_payment_date_hint">Data rinnovo polizza</string>
    <string name="insurance_expiration_date_hint">Data scadenza polizza</string>
    <string name="insurance_expiration_alarm">Imposta promeria scadenza pagamento</string>
    <string name="insurance_company_name_hint">Compagnia assicurativa</string>
    <string name="insurance_note_hint">Note</string>

    <string name="vehicle_brand">Brand</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicles">Vehicles</string>

    <string name="car_tax_description">Bollo</string>
    <string name="maintenance_description">Tagliando</string>
    <string name="tires_description">Gomme</string>
    <string name="revision_description">Revisione</string>


    <!-- Errors -->
    <string name="parse_date_error">Errore conversione data</string>

    <!-- User messages -->
    <string name="insurance_saved">Nuova assicurazione aggiunta con successo</string>
</resources>
